[gd_scene load_steps=2 format=3 uid="uid://dxs3qk7m2oat8"]

[ext_resource type="Script" uid="uid://dw6y7e0s5k2i3" path="res://scripts/Settings.gd" id="1"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.91, 0.52, 0.45, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleSection" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/TitleSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="NameSection" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayerNameLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/NameSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Default Player Name"
horizontal_alignment = 1

[node name="PlayerName" type="LineEdit" parent="CenterContainer/MainPanel/MarginContainer/VBox/NameSection"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
placeholder_text = "Enter your name"

[node name="ServerSection" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ServerUrlLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/ServerSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Online Server URL"
horizontal_alignment = 1

[node name="ServerUrl" type="LineEdit" parent="CenterContainer/MainPanel/MarginContainer/VBox/ServerSection"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
placeholder_text = "https://..."

[node name="DebugSection" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DebugModeLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/DebugSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Debug Mode"
horizontal_alignment = 1

[node name="DebugModeCheckBox" type="CheckBox" parent="CenterContainer/MainPanel/MarginContainer/VBox/DebugSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Enable Debug Panel (F3 to toggle)"

[node name="Separator2" type="HSeparator" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="ButtonsSection" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MainButtons" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ButtonsSection"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="SaveButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/ButtonsSection/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="CancelButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/ButtonsSection/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="ResetButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/ButtonsSection/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"
